k8s/istio-envoy-filter/deployment.networking.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-envoy-filter-demo
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - istio-envoy-filter-demo-gateway
  http:
    - name: "istio-envoy-filter-demo"
      match:
        - uri:
            exact: /istio-envoy-filter-demo
      rewrite:
        uri: /
      route:
        - destination:
            host: istio-envoy-filter-demo.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-envoy-filter-demo-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
